  unless a different default is chosen at compile time.
  This mode tries to detect "systemd-resolved", "resolvconf", and "netconfig"
  and chooses the mode that seems most suitable depending on build
  setting and runtime detection.
  "resolvconf" and "netconfig" are only considered iff NetworkManager
  was built with the respective options enabled.

=============================================
NetworkManager-1.26
Overview of changes since NetworkManager-1.24
=============================================

* Add a new build option 'firewalld-zone'; when enabled,
  NetworkManager installs a firewalld zone for connection sharing and
  puts interfaces using IPv4 or IPv6 shared mode in this zone during
  activation. The option is enabled by default.
  Note that NetworkManager still calls to iptables to enable
  masquerading and open needed ports for DHCP and DNS. The new option
  is useful on systems using firewalld with the nftables backend,
  where the iptables rules would not be sufficient.
* Extend the syntax for 'match' setting properties with '|', '&', '!'
  and '\\'.
* Add MUD URL property for connection profiles (RFC 8520) and set it
  for DHCP and DHCPv6 requests.
* Expose raw LLDP message on D-Bus and the MUD usage description URL.
* ifcfg-rh: handle "802-1x.{,phase2-}ca-path". Otherwise setting this
  property silently fails and a profile might accidentally not perform
  any authentication (CVE-2020-10754).
* ifcfg-rh: handle 802-1x.pin properties.
* ethernet: reset original autonegotiation/speed/duplex settings when
  deactivating device.
* Support ethtool coalesce and ring options.
* Allow team connections to work without D-Bus (e.g. in the initrd).
* Wi-Fi profiles now also autoconnect if all previous activation attempts
  failed. This means, an initial failure to autoconnect to the network will
  no longer block the automatism. A side effect is that existing Wi-Fi profiles
  which previously were blocked may now start to autoconnect.