@@ -377,8 +377,6 @@ typedef struct _NMDevicePrivate {
 
 	GCancellable *deactivating_cancellable;
 
-	guint32         ip4_address;
-
 	NMActRequest *  queued_act_request;
 	bool            queued_act_request_is_waiting_for_carrier:1;
 	NMDBusTrackObjPath act_request;
@@ -12300,24 +12298,6 @@ dnsmasq_cleanup (NMDevice *self)
 	priv->dnsmasq_manager = NULL;
 }
 
-static void
-_update_ip4_address (NMDevice *self)
-{
-	NMDevicePrivate *priv = NM_DEVICE_GET_PRIVATE (self);
-	const NMPlatformIP4Address *address;
-
-	g_return_if_fail (NM_IS_DEVICE (self));
-
-	if (   priv->ip_config_4
-	    && ip_config_valid (priv->state)
-	    && (address = nm_ip4_config_get_first_address (priv->ip_config_4))) {
-		if (address->address != priv->ip4_address) {
-			priv->ip4_address = address->address;
-			_notify (self, PROP_IP4_ADDRESS);
-		}
-	}
-}
-
 gboolean
 nm_device_is_nm_owned (NMDevice *self)
 {
@@ -13749,9 +13729,6 @@ nm_device_set_ip_config (NMDevice *self,
 
 	if (has_changes) {
 
-		if (IS_IPv4)
-			_update_ip4_address (self);
-
 		if (old_config != priv->ip_config_x[IS_IPv4])
 			_notify (self, IS_IPv4 ? PROP_IP4_CONFIG : PROP_IP6_CONFIG);
 
@@ -14275,8 +14252,6 @@ nm_device_bring_up (NMDevice *self, gboolean block, gboolean *no_firmware)
 
 	/* Can only get HW address of some devices when they are up */
 	nm_device_update_hw_address (self);
-
-	_update_ip4_address (self);
 
 	/* when the link comes up, we must restore IP configuration if necessary. */
 	if (priv->ip_state_4 == NM_DEVICE_IP_STATE_DONE) {
@@ -15997,12 +15972,6 @@ _cleanup_generic_post (NMDevice *self, CleanupType cleanup_type)
 		nm_active_connection_set_default (NM_ACTIVE_CONNECTION (priv->act_request.obj), AF_INET, FALSE);
 		nm_clear_g_signal_handler (priv->act_request.obj, &priv->master_ready_id);
 		act_request_set (self, NULL);
-	}
-
-	/* Clear legacy IPv4 address property */
-	if (priv->ip4_address) {
-		priv->ip4_address = 0;
-		_notify (self, PROP_IP4_ADDRESS);
 	}
 
 	if (cleanup_type == CLEANUP_TYPE_DECONFIGURE) {
@@ -17818,7 +17787,7 @@ get_property (GObject *object, guint prop_id,
 		g_value_set_uint (value, (priv->capabilities & ~NM_DEVICE_CAP_INTERNAL_MASK));
 		break;
 	case PROP_IP4_ADDRESS:
-		g_value_set_uint (value, priv->ip4_address);
+		g_value_set_uint (value, 0);
 		break;
 	case PROP_CARRIER:
 		g_value_set_boolean (value, priv->carrier);
